--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -63,7 +63,7 @@
         map = new google.maps.Map(document.getElementById("map"), {
           zoom: 15,
           center: pos,
-          mapId: "main_map",
+          mapId: "f543ed7dd1b2a7e2",
         });
         marker = new google.maps.marker.AdvancedMarkerElement({
           position: pos,
@@ -343,7 +343,7 @@
         gameStarted = 1;
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&libraries=marker&key=<%= apiKey %>"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=beta&callback=initMap&libraries=marker&key=<%= apiKey %>"></script>
 
     <script>
       setTimeout(function () {
