Added map List Tempelate

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -25,6 +25,7 @@
               <li data-link="home">Home</li>
               <li data-link="users">Users</li>
               <li data-link="routes">Routes</li>
+              <li data-link="maplist">Map List</li>
             </ul>
           </div>
         </div>
@@ -101,6 +102,15 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="vj_dynamic maplist">
+              <table class="table-striped">
+                <thead>
+                  <th>Name</th>
+                  <th>Link</th>
+                  <th>Action</th>
+                </thead>
+              </table>
             </div>
           </div>
         </div>
