Map Table Tempelate

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -22,7 +22,7 @@
           </div>
           <div class="menu">
             <ul style="list-style: none">
-              <li data-link="home">Home</li>
+              <li data-link="home" class="active">Home</li>
               <li data-link="users">Users</li>
               <li data-link="routes">Routes</li>
               <li data-link="maplist">Map List</li>
@@ -104,7 +104,7 @@
               </div>
             </div>
             <div class="vj_dynamic maplist">
-              <table class="table-striped">
+              <table class="table table-striped">
                 <thead>
                   <th>Name</th>
                   <th>Link</th>
