Refreshing Routes After deletion

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -625,6 +625,7 @@
                 (data) => {
                   if (!data) return;
                   notyf.success(data.message);
+                  renderRoutes();
                 }
               );
             });
