--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -212,6 +212,17 @@
                   </div>
                 </div>
                 <div class="form-group mb-2">
+                  <p>Opacity of Circle (0-100)</p>
+                  <input
+                    type="number"
+                    min="0"
+                    max="100"
+                    value="100"
+                    class="form-control"
+                    oninput="setCircleOpacity(this)"
+                  />
+                </div>
+                <div class="form-group mb-2">
                   <p class="m-0">Image Speed</p>
                   <input
                     type="number"
@@ -278,7 +289,18 @@
       const beachFlagImg = document.createElement("img");
       let pos = { lat: 55.5, lng: 254.7 };
       let mapId = 0;
-
+      let circleOpacity = 100;
+      const setCircleOpacity = (event) => {
+        circleOpacity = parseInt(event.value);
+        if (circleOpacity < 0 && circleOpacity.value) {
+          circleOpacity = 100;
+          event.value = 100;
+        }
+        circle.setValues({
+          fillOpacity: circleOpacity / 200,
+          strokeOpacity: circleOpacity / 100,
+        });
+      };
       const setMarkerSpeed = (event) => {
         speed = event.value;
         if (speed < 1) {
@@ -299,6 +321,7 @@
         }
         payloadData.size = size;
         $("#sizeNum").val(size);
+        beachFlagImg.width = size * 10;
       };
       const setMarkerSizeNum = (event) => {
         let size = parseInt(event.value);
