Circle Opacity from Admin and Refect to User

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -296,6 +296,7 @@
           circleOpacity = 100;
           event.value = 100;
         }
+        payloadData.opacity = circleOpacity;
         circle.setValues({
           fillOpacity: circleOpacity / 200,
           strokeOpacity: circleOpacity / 100,
