Change Profile Page Title

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -8,7 +8,7 @@
       content="YOUR_CLIENT_ID.apps.googleusercontent.com"
     />
 
-    <title>Login</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="/css/bs.css" />
     <style>
       body {
