Showing Login/profile at Landing

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      <% if (locals.title) { %> <%= title.toUpperCase() %> - MapLoopGame<%
-      }else{%>MapLoopGame<%}%>
+      <% if (locals.title) { %> <%= title.toUpperCase() %> - Urban Escape<%
+      }else{%>Urban Escape<%}%>
     </title>
     <link rel="stylesheet" href="/css/style.css" />
     <link
