--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -84,6 +84,9 @@
             <div class="link-container mt-3 text-center">
               <a href="/logout" class="btn btn-danger">Logout</a>
               <a href="/" class="btn btn-success ms-2">Map</a>
+              <% if (user.role.current=="admin") { %>
+              <a href="/admin" class="btn btn-success ms-2">Admin</a>
+              <% } %>
             </div>
             <hr />
             <div class="captured-images">
