--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -93,8 +93,8 @@
     </div>
 
     <script>
-      let notyf;
       let mapParsedId = document.getElementById("mapParsedId").value;
+      let notyf;
       let circleOpacity = 100;
       $(document).ready(() => {
         if (!mapParsedId) return false;
@@ -153,7 +153,7 @@
             );
             $.post(
               "/user/profile/capture",
-              { image: ImgPath[ImgPath.length - 1] },
+              { image: ImgPath[ImgPath.length - 1], mapId: mapParsedId },
               (data, status, xhr) => {
                 if (
                   status === "success" &&
@@ -175,12 +175,12 @@
                     data.message ||
                     "An error occurred while capturing the image.";
                   notyf.error(errorMessage);
-                  return (window.location.href = "/auth");
+                  // return (window.location.href = "/auth");
                 }
               }
             ).fail((xhr, status, error) => {
               if (xhr.status == 302) {
-                return (window.location.href = "/auth");
+                // return (window.location.href = "/auth");
               }
               const errorMessage =
                 xhr.responseJSON?.message || "An unexpected error occurred.";
