--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -109,14 +109,17 @@
                   class="form my-5 bg-light p-3 col-sm-10 col-md-8 col-lg-6 m-0 new_map_form"
                 >
                   <h3 class="text-center m-0 mb-3">New Map</h3>
-                  <div class="form-group mb-2">
+                  <div class="d-flex">
                     <input
                       placeholder="Map Name"
                       class="form-control"
                       name="name"
                       id="name"
                     />
+                    <button class="ms-2 btn btn-warning">Create</button>
                   </div>
+                </form>
+                <div class="missionsCreator" style="display: none">
                   <p class="mb-1 mt-2">Set Missions</p>
                   <div class="form-group mb-2">
                     <input
@@ -163,7 +166,7 @@
                   <div class="mission-list mb-2">
                     <div class="alert alert-warning">No Missions</div>
                   </div>
-                </form>
+                </div>
               </div>
               <table class="table table-striped">
                 <thead>
@@ -336,15 +339,14 @@
       let pos = { lat: 55.5, lng: 254.7 };
       let mapId = 0;
       let circleOpacity = 100;
-      const missions = { redeemLink: "", adventures: [] };
-      let missionImages = [];
+      const missions = { redeemLink: "", name: "", images: [] };
       $(".mission-icons div.mission-icon-select").click(function () {
         const imgSrc = $(this).data("src");
         if (!imgSrc) return;
-        if (missionImages.includes(imgSrc)) return;
-        missionImages.push(imgSrc);
+        if (missions.images.includes(imgSrc)) return;
+        missions.images.push(imgSrc);
         $(this).fadeOut();
-        $("#selectedImagesCount").text(missionImages.length);
+        $("#selectedImagesCount").text(missions.images.length);
       });
       const setCircleOpacity = (event) => {
         circleOpacity = parseInt(event.value);
@@ -493,15 +495,29 @@
         }
       });
       function saveMission() {
+        if (!mapId) return notyf.error("Invalid MapId");
         const missionName = $("#missionname").val();
         const missionUrl = $("#missionurl").val();
         if (!missionName || !missionUrl)
           return notyf.error("Name or URL can't be Empty");
 
         missions.redeemLink = missionUrl;
-        missions.adventures.push({ name: missionName, images: missionImages });
-        missionImages = [];
-        notyf.success("Mission Saved!");
+        missions.name = missionName;
+        $.post(
+          "/admin/map/missions",
+          { mapId: mapId, missions: missions },
+          (data) => {
+            $(".missionsCreator").hide();
+            $(".new_map_form").fadeIn();
+            missions.redeemLink = "";
+            missions.name = "";
+            missions.images = [];
+            $("#missionname").val("");
+            $("#missionurl").val("");
+            $(".mission-icons div.mission-icon-select").show();
+            notyf.success("Missions Added");
+          }
+        );
       }
       $(document).ready(() => {
         fetchMaps();
@@ -729,7 +745,7 @@
           const myData = data.maps.reverse();
           myData.forEach((d) => {
             $("tbody.map_list").append(
-              `<tr><td>${d.name}</td><td><a target='_blank' href='/map/${d.id}'>View Map</a></td><td><button class='btn btn-info me-1 edit_map' data-id='${d.id}'>Edit</button><button class='btn btn-danger delete_map' data-id='${d.id}'>delete</button></td></tr>`
+              `<tr><td>${d.name}</td><td><a target='_blank' href='/map/${d.id}'>View Map</a></td><td><button class='btn btn-info me-1 edit_map' data-id='${d.id}'>Edit</button><button class='me-1 btn btn-danger delete_map' data-id='${d.id}'>delete</button><button class='btn btn-warning setupMissions' data-id='${d.id}'>Missions</button></td></tr>`
             );
           });
           $(".delete_map")
@@ -755,6 +771,15 @@
               $(
                 ".sidebar-container .sidebar .menu ul li[data-link='routes']"
               ).click();
+            });
+
+          $(".setupMissions")
+            .off("click")
+            .on("click", function () {
+              mapId = $(this).data("id");
+              if (!mapId) return notyf.error("Invalid Map");
+              $(".missionsCreator").fadeIn();
+              $(".new_map_form").hide();
             });
         });
       }
